--- a/my-pwd-vue-proj/package.json
+++ b/my-pwd-vue-proj/package.json
@@ -13,6 +13,11 @@
     "both": "concurrently \"npm run server\" \"npm run client\""
   },
   "dependencies": {
+    "@fontsource/barlow": "^5.2.5",
+    "@fontsource/montserrat": "^5.2.5",
+    "@fontsource/raleway": "^5.2.5",
+    "@fontsource/roboto": "^5.2.5",
+    "@fontsource/work-sans": "^5.2.5",
     "@fontsource/cooper-hewitt": "^5.2.5",
     "@fontsource/inter": "^5.2.5",
     "@fontsource/poppins": "^5.2.5",
