--- a/my-pwd-vue-proj/package.json
+++ b/my-pwd-vue-proj/package.json
@@ -14,28 +14,20 @@
   },
   "dependencies": {
     "@fontsource/barlow": "^5.2.5",
+    "@fontsource/cooper-hewitt": "^5.2.5",
+    "@fontsource/inter": "^5.2.5",
     "@fontsource/montserrat": "^5.2.5",
+    "@fontsource/poppins": "^5.2.5",
     "@fontsource/raleway": "^5.2.5",
     "@fontsource/roboto": "^5.2.5",
     "@fontsource/work-sans": "^5.2.5",
-    "@fontsource/cooper-hewitt": "^5.2.5",
-    "@fontsource/inter": "^5.2.5",
-    "@fontsource/poppins": "^5.2.5",
     "axios": "^1.8.4",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
     "morgan": "^1.10.0",
-    "mysql": "^2.18.1",
-    "mysql2": "^3.13.0",
-    "nodemon": "^3.1.9",
-    "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.2.1",
-    "concurrently": "^9.1.2",
-    "vite": "^6.2.0"
+    "concurrently": "^9.1.2"
   }
 }
