--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@fontsource/barlow": "^5.2.5",
     "@fontsource/cooper-hewitt": "^5.2.5",
     "@fontsource/montserrat": "^5.2.5",
+    "@fontsource/poppins": "^5.2.5",
     "@fontsource/raleway": "^5.2.5",
     "@fontsource/roboto": "^5.2.5",
     "@fontsource/work-sans": "^5.2.5",
