--- a/my-pwd-vue-proj/backend/package.json
+++ b/my-pwd-vue-proj/backend/package.json
@@ -14,6 +14,7 @@
     "express": "^4.21.2",
     "morgan": "^1.10.0",
     "mysql2": "^3.14.0",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "ws": "^8.18.1"
   }
 }
