--- a/my-pwd-vue-proj/frontend/package.json
+++ b/my-pwd-vue-proj/frontend/package.json
@@ -16,6 +16,7 @@
     "@fontsource/roboto": "^5.2.5",
     "@fontsource/work-sans": "^5.2.5",
     "@vitejs/plugin-vue": "^5.2.1",
+    "@vuepic/vue-datepicker": "^11.0.2",
     "primeicons": "^7.0.0",
     "primevue": "^4.3.3",
     "vite": "^6.2.2",
