Working image files, can now be viewed but needs some more work

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,11 @@
 {
     "cSpell.words": [
         "axios",
+        "barangay",
+        "raleway",
+        "toastification",
         "uppa",
-        "usersdb"
+        "usersdb",
+        "vuetify"
     ]
 }
