--- a/my-pwd-vue-proj/frontend/package.json
+++ b/my-pwd-vue-proj/frontend/package.json
@@ -21,8 +21,10 @@
     "primevue": "^4.3.3",
     "vite": "^6.2.2",
     "vue": "^3.5.13",
+    "vue-easy-lightbox": "^1.19.0",
     "vue-multiselect": "^3.2.0",
     "vue-router": "^4.5.0",
+    "vue-toastification": "^2.0.0-rc.5",
     "vuetify": "^3.0.0"
   }
 }
