--- a/my-pwd-vue-proj/frontend/package.json
+++ b/my-pwd-vue-proj/frontend/package.json
@@ -17,8 +17,11 @@
     "@fontsource/work-sans": "^5.2.5",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vuepic/vue-datepicker": "^11.0.2",
+    "@vueup/vue-quill": "^1.2.0",
+    "dompurify": "^3.2.5",
     "primeicons": "^7.0.0",
     "primevue": "^4.3.3",
+    "quill": "^2.0.3",
     "vite": "^6.2.2",
     "vue": "^3.5.13",
     "vue-easy-lightbox": "^1.19.0",
