Fixing my frontend req, error in path, change it back from dynamic to static

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "barangay",
         "birthcert",
         "brgycert",
+        "cooldown",
         "govissue",
         "philhealth",
         "popout",
