--- a/my-pwd-vue-proj/backend/.env
+++ b/my-pwd-vue-proj/backend/.env
@@ -1,5 +1,19 @@
+# MySQL
 DB_HOST=localhost
 DB_USER=root
 DB_PASSWORD="$uppaN1ka!@#"
+# DB_PASSWORD=$uppaN1ka!@# Try this if the code above doesn't work
+
 DB_DATABASE=lpcpwd_db
 DB_PORT=3306
+
+# JWT
+JWT_ACCESS_SECRET=&=9hK[{&j<!0ZHjy?#e|o!lMBU_59l}06I+Z||Ef:4)}^ngvR#!j<#JSdL,mI<4<
+JWT_REFRESH_SECRET=9x!tKY^Ao)pB*]Z_lz%5uYvB1fJGf5ciqvA&0+EPm;NC3Vn}_4LxHU7>Z28QD@Yj?
+ACCESS_TOKEN_EXP=15m
+REFRESH_TOKEN_EXP=7d
+NODE_ENV=development
+
+# Redis
+# REDIS_HOST=redis
+# REDIS_PORT=6379
