--- a/my-pwd-vue-proj/backend/package.json
+++ b/my-pwd-vue-proj/backend/package.json
@@ -8,15 +8,21 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.5.0",
     "express": "^4.21.2",
+    "express-rate-limit": "^7.5.0",
+    "ioredis": "^5.6.1",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
     "mysql2": "^3.14.0",
     "node-cron": "^3.0.3",
     "nodemon": "^3.1.9",
+    "redis": "^4.7.0",
     "ws": "^8.18.1"
   }
 }
